--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/modbus-esp8266"]
 	path = lib/modbus-esp8266
 	url = https://github.com/emelianov/modbus-esp8266.git
+[submodule "lib/Adafruit_MQTT_Library"]
+	path = lib/Adafruit_MQTT_Library
+	url = https://github.com/adafruit/Adafruit_MQTT_Library.git
